[package]
name = "ft5336"
version = "0.1.0"
authors = "bobgates"
edition = "2021"
categories = ["embedded", "hardware-support", "no-std"]
description = "Platform agnostic driver for FT5883 touch screen driver used on STM32F746 Discovery board built using the embedded-hal"
keywords = ["embedded-hal"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JoshMcguigan/tsl256x"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.1"